# multicalc-rust

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTIONS.md  Cargo.toml  README.md  build.rs  clippy.toml  deny.toml  memory.x
crates/multicalc/: Cargo.toml  GUIDE.md  LICENSE  README.md
crates/multicalc/benches/: README.md  benchmarks.rs  calculus.md  calculus.rs  linear_algebra.md  linear_algebra.rs  ode.md  ode.rs  optimization.rs  root_finding.md  root_finding.rs
crates/multicalc/examples/: README.md  approximation.rs  autodiff_scalars.rs  curve_fit.rs  differentiation.rs  discretization.rs  embedded_curve_fit.rs  gaussian_integration.rs  iterative_integration.rs  jacobian_hessian.rs  lie_groups.rs  linear_algebra.rs  ode.rs  optimization.rs  optimization_solvers.rs  root_finding.rs  svd.rs  vector_field.rs
crates/multicalc/src/: error.rs  lib.rs  random.rs
crates/multicalc/src/approximation/: README.md  linear_approximation.rs  mod.rs  quadratic_approximation.rs
crates/multicalc/src/control/: derivative_filter.rs  follow_the_gap.rs  mod.rs  pid.rs  pure_pursuit.rs
crates/multicalc/src/discretization/: mod.rs
crates/multicalc/src/estimation/: extended_kalman_filter.rs  kalman_filter.rs  mod.rs  particle_filter.rs
crates/multicalc/src/gaussian_tables/: README.md  hermite.rs  laguerre.rs  legendre.rs  mod.rs
crates/multicalc/src/kinematics/: diff_drive.rs  differential_drive.rs  mod.rs  odometry.rs  unicycle.rs
crates/multicalc/src/linear_algebra/: cholesky.rs  expm.rs  lu.rs  macros.rs  matrix.rs  mod.rs  qr.rs  svd.rs  test.rs  vector.rs
crates/multicalc/src/motion/: mod.rs  polyline_path.rs
crates/multicalc/src/numerical_derivative/: README.md  autodiff.rs  derivator.rs  finite_difference.rs  hessian.rs  jacobian.rs  mod.rs  mode.rs
crates/multicalc/src/numerical_integration/: README.md  gaussian_integration.rs  integrator.rs  iterative_integration.rs  mod.rs  mode.rs
crates/multicalc/src/ode/: mod.rs  rk4.rs  rk45.rs  tableau.rs
crates/multicalc/src/optimization/: README.md  gauss_newton.rs  levenberg_marquardt.rs  mod.rs  test.rs  trust_region.rs
crates/multicalc/src/root_finding/: bisection.rs  mod.rs  newton.rs  newton_system.rs
crates/multicalc/src/scalar/: dual.rs  function.rs  hyper_dual.rs  jet.rs  mod.rs  numeric.rs  primal.rs
crates/multicalc/src/spatial/: README.md  mod.rs  quaternion.rs  twist.rs  wrench.rs
crates/multicalc/src/spatial/lie/: mod.rs  se2.rs  se3.rs  so2.rs  so3.rs
crates/multicalc/src/utils/: README.md  error_codes.rs  mod.rs  summation.rs
crates/multicalc/src/vector_field/: README.md  curl.rs  divergence.rs  flux_integral.rs  line_integral.rs  mod.rs
crates/multicalc/tests/: approximation.rs  discretization.rs  gaussian_tables.rs  linear_algebra.rs  numerical_derivative.rs  numerical_integration.rs  ode.rs  optimization.rs  root_finding.rs  scalar.rs  spatial.rs  utils.rs  vector_field.rs
crates/multicalc/tests/linear_algebra/: cholesky.rs  helpers.rs  lu.rs  macros.rs  matrix.rs  qr.rs  svd.rs
crates/multicalc/tests/ode/: rk4.rs  rk45.rs
crates/multicalc/tests/spatial/: lie.rs  quaternion.rs
crates/multicalc/tests/suite/: discretization.rs  gaussian_tables.rs  main.rs  numerical_derivative.rs  numerical_integration.rs  optimization.rs  random.rs  root_finding.rs  scalar.rs  utils.rs  vector_field.rs
crates/multicalc/tests/suite/control/: derivative_filter.rs  follow_the_gap.rs  mod.rs  pid.rs  pure_pursuit.rs
crates/multicalc/tests/suite/estimation/: extended_kalman_filter.rs  kalman_filter.rs  mod.rs  particle_filter.rs
crates/multicalc/tests/suite/kinematics/: diff_drive.rs  differential_drive.rs  mod.rs  odometry.rs  unicycle.rs
crates/multicalc/tests/suite/linear_algebra/: cholesky.rs  lu.rs  matrix.rs  mod.rs  qr.rs  svd.rs  vector.rs
crates/multicalc/tests/suite/motion/: mod.rs  polyline_path.rs
crates/multicalc/tests/suite/ode/: mod.rs  rk4.rs  rk45.rs
crates/multicalc/tests/suite/spatial/: lie.rs  mod.rs  quaternion.rs  twist_wrench.rs
demos/: Cargo.toml  README.md  plot.py
demos/examples/basics/: approximation.rs  autodiff_scalars.rs  avoidance.rs  curve_fit.rs  differentiation.rs  discretization.rs  estimation.rs  gaussian_integration.rs  iterative_integration.rs  jacobian_hessian.rs  kinematics.rs  lie_groups.rs  linear_algebra.rs  ode.rs  optimization_solvers.rs  root_finding.rs  svd.rs  vector_field.rs
demos/examples/resources/maps/: corridor.csv
demos/examples/showcase/: 2d_arm_ik.rs  3d_arm_ik.rs  curve_fit_live.rs  curve_fit_record.rs  fourier_ferris.rs  gradient_marbles.rs  ik_servo.rs  newton_fractal.rs  serpent_ik.rs
demos/examples/showcase/support/: ferris_outline.rs
demos/src/: csv_sink.rs  lib.rs  loop_util.rs  rerun_sink.rs  sink.rs
demos/src/sim/: beacons.rs  estimator.rs  global_position_sensor.rs  inertial_measurement_unit.rs  lap_track_2d.rs  lidar.rs  map.rs  mod.rs  occupancy_grid.rs  wheeled_vehicle.rs
showcase/viz/: Cargo.toml  README.md
showcase/viz/examples/: curve_fit_live.rs  curve_fit_record.rs  fourier_ferris.rs  gradient_marbles.rs  ik_servo.rs  newton_fractal.rs
showcase/viz/src/: convert.rs  csv_sink.rs  lib.rs  loop_util.rs  rerun_sink.rs  sink.rs
tools/embedded-smoke/: Cargo.toml  README.md  build.rs
tools/embedded-smoke/memory/: cortex-m0.x  riscv32-virt.x
tools/embedded-smoke/src/: checks.rs  fixtures.rs  main.rs
tools/oracle/: Cargo.toml  README.md
tools/oracle/fixtures/v1/discretization/: expm_rand_4.json  expm_skew_3.json  expm_stiff_diag_3.json  (+2 more)
tools/oracle/src/: lib.rs  load.rs  problems.rs  schema.rs
tools/oracle/tests/: discretization.rs  linalg.rs  ode.rs  optimization.rs  quadrature.rs
tools/qa/: Cargo.toml  README.md
tools/qa/benches/: README.md  benchmarks.rs  calculus.rs  latency.rs  optimization.md  root_finding.rs
tools/qa/src/: load.rs  problems.rs  schema.rs
tools/qa/tests/: calculus.rs  discretization.rs  estimation.rs  linalg.rs  ode.rs  optimization.rs  quadrature.rs  root_finding.rs
tools/testkit/: Cargo.toml
tools/testkit/src/: lib.rs  problems.rs  tol.rs
(+268 files in other folders)
