[workspace]
members = ["crates/multicalc"]
default-members = ["crates/multicalc"]
resolver = "3"

[workspace.package]
version = "0.7.0"
authors = ["akathail <anmolkathail@gmail.com>"]
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/kmolan/multicalc-rust"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
# For `[&dyn Fn(&[f64; N]) -> f64; N]` field/transform arrays
type_complexity = "allow"
