[package]
name = "multicalc"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Rust scientific computing for single and multi-variable calculus"
repository.workspace = true
license.workspace = true
documentation = "https://docs.rs/multicalc"
readme = "README.md"
keywords = ["Math", "Science", "Calculus", "Differentiation", "Integration"]
categories = ["mathematics", "science", "no-std"]
autobenches = false

[dependencies]
libm = "0.2"

[target.'cfg(not(target_arch = "arm"))'.dev-dependencies]
rand = "0.8"
criterion = "0.5"

[features]
default = []
alloc = []

[[bench]]
name = "benchmarks"
harness = false

[lints]
workspace = true
