[package]
name = "multicalc"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Calculus, autodiff, nonlinear least squares and linear algebra in pure safe no_std Rust"
repository.workspace = true
license.workspace = true
documentation = "https://docs.rs/multicalc"
readme = "README.md"
keywords = ["no-std", "autodiff", "calculus", "embedded", "numerical-methods"]
categories = ["mathematics", "no-std", "no-std::no-alloc", "embedded", "science::robotics"]
autobenches = false

[dependencies]
libm = "0.2"

[target.'cfg(not(target_arch = "arm"))'.dev-dependencies]
rand = "0.8"
criterion = "0.5"
proptest = "1.11"
multicalc-testkit = { path = "../../tools/testkit" }

[features]
default = []
alloc = []

[[bench]]
name = "benchmarks"
harness = false

[lints]
workspace = true
