[package]
name = "multicalc"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Calculus, autodiff, nonlinear least squares, and Lie groups in pure no_std Rust: the same math from 64-bit servers to bare-metal microcontrollers"
repository.workspace = true
license.workspace = true
documentation = "https://docs.rs/multicalc"
readme = "README.md"
keywords = ["no-std", "autodiff", "calculus", "embedded", "numerical-methods"]
categories = ["mathematics", "no-std", "no-std::no-alloc", "embedded", "science::robotics"]

[dependencies]
libm = "0.2"

[target.'cfg(not(target_arch = "arm"))'.dev-dependencies]
rand = "0.8"
proptest = "1.11"
multicalc-testkit = { path = "../../tools/testkit" }

[features]
default = []
alloc = []

[lints]
workspace = true
