[package]
name = "multicalc-viz"
version.workspace = true
edition.workspace = true
# Rerun requires Rust 1.92, above the workspace 1.85 floor, so this crate sets its own.
rust-version = "1.92"
license.workspace = true
publish = false

[dependencies]
multicalc = { path = "../../crates/multicalc" }
# Pinned to match the paired Rerun viewer version.
rerun = { version = "=0.33.1", default-features = false }

[lints]
workspace = true
