[package]
name = "multicalc-oracle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
multicalc = { path = "../../crates/multicalc" }
multicalc-testkit = { path = "../testkit" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
