[package]
name = "multicalc-qa"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
autobenches = false

[dependencies]
multicalc = { path = "../../crates/multicalc" }
multicalc-testkit = { path = "../testkit" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(target_arch = "arm"))'.dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false

[lints]
workspace = true
