[package]
name = "multicalc-qa"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
multicalc = { path = "../../crates/multicalc", features = ["alloc"] }
multicalc-testkit = { path = "../testkit" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# default-features off skips the plotters/HTML report tree; we render our own markdown in /benchmarks/latency.md
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "latency"
harness = false

[lints]
workspace = true
